apps/cnp/sbox/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    hmcts.github.com/envInjector: enabled
    slackChannel: ${TEAM_NOTIFICATION_CHANNEL}
