apps/cnp/sbox/base/test-ingress-redirect.yaml
#this is to apply permanent redirect on plum
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: cnp-mokainosspringboot@kubernetescrd
  name: plum-web-redirect
  namespace: cnp
spec:
  rules:
    - host: labs-mokainosspringboot-sandbox.service.core-compute-sandbox.internal
      http:
        paths:
          - backend:
              service:
                name: plum-frontend-nodejs
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mokainosspringboot
  namespace: cnp
spec:
  redirectRegex:
    permanent: true
    regex: ^https://labs-mokainosspringboot-sandbox.service.core-compute-sandbox.internal(.*)
    replacement: https://plum.sandbox.platform.hmcts.net
